--- a/blog/posts/2024-02-08-mangekyo.md
+++ b/blog/posts/2024-02-08-mangekyo.md
@@ -4,4 +4,4 @@ layout: post
 author: chrispelatari
 ---
 
-![mangekyo](http://chris.pelatari.com/assets/2024-02-04-460062.png)
+![mangekyo](images/2024-02-04-460062.png)
